fix: mobile card overlap issue

--- a/components/ProjectCard/ProjectCard.module.scss
+++ b/components/ProjectCard/ProjectCard.module.scss
@@ -15,7 +15,7 @@
 }
 
 .card_title {
-  height: 4rem;
+  // height: 4rem;
 }
 
 .cardImageWrapper {
@@ -68,8 +68,8 @@ p.small_card_text {
 .card_description {
   font-size: 18px;
   line-height: 18px;
-  margin-top: 0rem;
-  margin-bottom: 0rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   height: 36px;
   font-weight: 500;
   color: rgb(148, 148, 148);
